fix(completion): resolve members through semantic model
- resolve receiver types
- complete object members
- support this and super
- remove legacy member lookup